# rustwithdata

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
initdb/: init.sql
src/: errors.rs  main.rs  schema.rs
