[package]
name = "rustwithdata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = { version = "0.6.18", features = ["json"] }
dotenv = "0.15.0"
serde = { version = "1.0.163", features = ["derive"] }
sqlx = { version = "0.6.3", features = ["macros", "postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
